--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -11,10 +11,9 @@
     <form action="{{ url_for('speak') }}" method="post">
         <textarea name="text_to_speak" cols="100" rows="10"></textarea>
         <br>
-        <input type="radio" name="lang" value="en"> English<br>
-        <input type="radio" name="lang" value="fr"> French<br>
-        <input type="radio" name="lang" value="de"> German<br>
-
+        {% for lang_code in lang_codes %}
+        <input type="radio" name="lang_code" value="{{lang_code.code}}"> {{lang_code.name}}<br>
+        {% endfor %}
         <br><br>
         <input type="submit" value="Speak">
     </form>
