--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -11,7 +11,13 @@
     <form action="{{ url_for('speak') }}" method="post">
         <textarea name="text_to_speak" cols="100" rows="10"></textarea>
         <br>
-        {% for lang in languages %}
+        {for i in range(len(languages)):}
+            {
+                lang = languages[i]
+                selected = False
+                if (i == 0):
+                    selected = True
+            }
             <input type="radio" name="lang_code" value="{{lang['lang_code']}}"> {{lang['name']}}<br>
         {% endfor %}
         <br><br>
