--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -12,12 +12,12 @@
         <textarea name="text_to_speak" cols="100" rows="10"></textarea>
         <br>
         {% for i in range(languages | length): %}
-            {%
-                selected = False
-                if (i == 0):
-                    selected = True
-            %}
-            <input type="radio" name="lang_code" value="{{languages[i]['lang_code']}}"> {{languages[i]['name']}}<br>
+        {%  if (i == 0) %}
+        <input checked="true" type="radio" name="lang_code" value="{{languages[i]['lang_code']}}"> {{languages[i]['name']}}<br>
+        {% endif %}
+        {%  if (i > 0) %}
+        <input type="radio" name="lang_code" value="{{languages[i]['lang_code']}}"> {{languages[i]['name']}}<br>
+        {% endif %}
         {% endfor %}
         <br><br>
         <input type="submit" value="Speak">
