--- a/webserver/templates/home.html
+++ b/webserver/templates/home.html
@@ -38,7 +38,7 @@
         {% endif %}
         {% endfor %}
         <br><br>
-        <input type="submit" value="Speak">
+        <input type="submit" value="Save Settings">
     </form>
 </body>
 
