--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
         {% endif %}
         {% endfor %}
         <br><br>
-        <input type="submitButton" name='submit' value="Speak">
+        <input type="submit" name='submitButton' value="Speak">
     </form>
 
     <br><br>
@@ -38,7 +38,7 @@
         {% endif %}
         {% endfor %}
         <br><br>
-        <input type="submitButton" value="Save Settings">
+        <input type="submit" name="submitButton" value="Save Settings">
     </form>
 </body>
 
