--- a/templates/home.html
+++ b/templates/home.html
@@ -8,7 +8,7 @@
         Teddy the 2nd web interface
     </h2>
 
-    <form action="{{ url_for('speak') }}" method="post" onsubmit="submitButton.disabled = true; return true;">
+    <form action="{{ url_for('speak') }}" method="post" onsubmit="submitButton.style.visibility = 'hidden'; return true;">
         <textarea name="text_to_speak" cols="100" rows="10"></textarea>
         <br>
         {% for i in range(languages | length): %}
@@ -26,7 +26,7 @@
     <br><br>
     <hr>
 
-    <form action="{{ url_for('save_settings') }}" method="post"  onsubmit="submitButton.disabled = true; return true;">
+    <form action="{{ url_for('save_settings') }}" method="post"  onsubmit="submitButton.style.visibility = 'hidden'; return true;">
         When doing object recognition, use:
         <br>
         {% for i in range(languages | length): %}
