--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -1,96 +1,125 @@
-{#
-# Copyright 2018 Google LLC
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#}
 <!doctype html>
-<html>
-  <head>
-    <title>Google App Engine Flexible Environment - Python Websockets Chat</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body>
+<html lang="en">
 
-    <!-- [START gae_flex_websockets_form] -->
-    <p>Chat demo</p>
-    <form id="chat-form">
-      <textarea id="chat-text" placeholder="Enter some text..."></textarea>
-      <button type="submit">Send</button>
-    </form>
+<head>
+  <title>Teddy the 2nd Web Interface</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <div>
-      <p>Messages:</p>
-      <ul id="chat-response"></ul>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row mt-1">
+      <div class="col">
+        <div>
+          <div id="chat-status"></div>
+        </div>
+      </div>
     </div>
 
-    <div>
-      <p>Status:</p>
-      <ul id="chat-status"></ul>
-    </div>
-    <!-- [END gae_flex_websockets_form] -->
+    <div class="row mt-2">
+      <div class="col">
+        <div class="form-group">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script>
-    // [START gae_flex_websockets_js]
-    $(function() {
-      /* If the main page is served via https, the WebSocket must be served via
-         "wss" (WebSocket Secure) */
+          <form id="chat-form">
+
+            <textarea class="form-control mb-3" cols="40" rows="10" id="chat-text" placeholder="Enter some text..."></textarea>
+
+
+            <div class="container">
+
+              <div class="form-check form-check-inline">
+
+                <input class="form-check-input" type="radio" name="language" id="english_radio" value="en" checked>
+                <label class="form-check-label" for="english_radio">
+                  English
+                </label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="language" id="french_radio" value="fr">
+                <label class="form-check-label" for="french_radio">
+                  French
+                </label>
+              </div>
+              <div class="form-check form-check-inline">
+                <input class="form-check-input" type="radio" name="language" id="romanian_radio" value="ro">
+                <label class="form-check-label" for="romanian_radio">
+                  Romanian
+                </label>
+              </div>
+            </div>
+        </div>
+
+
+        <button class="btn btn-primary float-right" type="submit">Speak</button>
+        </form>
+      </div>
+    </div>
+
+  </div>
+
+  </div>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+
+  <script>
+    $(function () {
       var scheme = window.location.protocol == "https:" ? 'wss://' : 'ws://';
-      var webSocketUri =  scheme
-                          + window.location.hostname
-                          + (location.port ? ':'+location.port: '')
-                          + '/chat';
+      var webSocketUri = scheme
+        + window.location.hostname
+        + (location.port ? ':' + location.port : '')
+        + '/chat';
 
-      /* Get elements from the page */
       var form = $('#chat-form');
       var textarea = $('#chat-text');
-      var output = $('#chat-response');
       var status = $('#chat-status');
 
       /* Helper to keep an activity log on the page. */
-      function log(text){
+      function log(text) {
         status.append($('<li>').text(text))
       }
 
       /* Establish the WebSocket connection and register event handlers. */
       var websocket = new WebSocket(webSocketUri);
 
-      websocket.onopen = function() {
+      websocket.onopen = function () {
         log('Connected');
       };
 
-      websocket.onclose = function() {
+      websocket.onclose = function () {
         log('Closed');
       };
 
-      websocket.onmessage = function(e) {
-        log('Message received');
-        output.append($('<li>').text(e.data));
+      websocket.onmessage = function (e) {
+
       };
 
-      websocket.onerror = function(e) {
+      websocket.onerror = function (e) {
         log('Error (see console)');
         console.log(e);
       };
 
       /* Handle form submission and send a message to the websocket. */
-      form.submit(function(e) {
+      form.submit(function (e) {
         e.preventDefault();
         var data = textarea.val();
-        websocket.send(data);
+        var language = $('input[name=language]:checked', '#chat-form').val()
+        websocket.send(language + "_#_#_" + data);
       });
     });
-    // [END gae_flex_websockets_js]
-    </script>
-  </body>
+      // [END gae_flex_websockets_js]
+  </script>
+</body>
+
 </html>
