--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -36,19 +36,19 @@
 
               <div class="form-check form-check-inline">
 
-                <input class="form-check-input" type="radio" name="language" id="english_radio" value="en" checked>
+                <input class="form-check-input" type="radio" name="language" id="english_radio" value="en-US" checked>
                 <label class="form-check-label" for="english_radio">
                   English
                 </label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="language" id="french_radio" value="fr">
+                <input class="form-check-input" type="radio" name="language" id="french_radio" value="fr-FR">
                 <label class="form-check-label" for="french_radio">
                   French
                 </label>
               </div>
               <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="language" id="romanian_radio" value="ro">
+                <input class="form-check-input" type="radio" name="language" id="romanian_radio" value="ro-RO">
                 <label class="form-check-label" for="romanian_radio">
                   Romanian
                 </label>
