--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -267,6 +267,8 @@
         websocket.send("__SENSITIVITY__" + sensitivity_json);
       });
 
+     // websocket.send("__REQUEST_CONFIGURATION__");
+
     });
       // [END gae_flex_websockets_js]
   </script>
