--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -267,7 +267,7 @@
         websocket.send("__SENSITIVITY__" + sensitivity_json);
       });
 
-     // websocket.send("__REQUEST_CONFIGURATION__");
+      websocket.send("__REQUEST_CONFIGURATION__");
 
     });
       // [END gae_flex_websockets_js]
