--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -241,7 +241,7 @@
       };
 
       websocket.onmessage = function (e) {
-
+        console.log(e);
       };
 
       websocket.onerror = function (e) {
