--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -241,7 +241,7 @@
       };
 
       websocket.onmessage = function (e) {
-        alert(e);
+        alert(e.data);
       };
 
       websocket.onerror = function (e) {
