--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -78,7 +78,7 @@
         Hotword sensitivity
       </div>
       <div class="card-body">
-        <div class="row">
+        <div class="row" style="white-space: nowrap;">
           <div class="col" style="white-space: nowrap;">
             "Hello, Teddy"
           </div>
@@ -94,7 +94,7 @@
             +
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="white-space: nowrap;">
           <div class="col">
             "Explore !"
           </div>
@@ -110,7 +110,7 @@
             +
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="white-space: nowrap;">
           <div class="col" style="white-space: nowrap;">
             "Speak English"
           </div>
@@ -126,7 +126,7 @@
             +
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="white-space: nowrap;">
           <div class="col" style="white-space: nowrap;" style="white-space: nowrap;">
             "Speak French"
           </div>
@@ -142,7 +142,7 @@
             +
           </div>
         </div>
-        <div class="row">
+        <div class="row" style="white-space: nowrap;">
           <div class="col" style="white-space: nowrap;">
             "Speak German"
           </div>
