--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -82,6 +82,8 @@
           <div class="col" style="white-space: nowrap;">
             "Hello, Teddy"
           </div>
+        </div>
+        <div class="row" style="white-space: nowrap;">
           <div class="col align-items-end">
             <div class="float-right text-muted" style="white-space: nowrap;">
               -
@@ -98,6 +100,8 @@
           <div class="col">
             "Explore !"
           </div>
+        </div>
+        <div class="row" style="white-space: nowrap;">
           <div class="col align-items-end">
             <div class="float-right text-muted" style="white-space: nowrap;">
               -
@@ -114,6 +118,8 @@
           <div class="col" style="white-space: nowrap;">
             "Speak English"
           </div>
+        </div>
+        <div class="row" style="white-space: nowrap;">
           <div class="col align-items-end">
             <div class="float-right text-muted" style="white-space: nowrap;">
               -
@@ -130,6 +136,8 @@
           <div class="col" style="white-space: nowrap;" style="white-space: nowrap;">
             "Speak French"
           </div>
+        </div>
+        <div class="row" style="white-space: nowrap;">
           <div class="col align-items-end">
             <div class="float-right text-muted" style="white-space: nowrap;">
               -
@@ -146,6 +154,8 @@
           <div class="col" style="white-space: nowrap;">
             "Speak German"
           </div>
+        </div>
+        <div class="row" style="white-space: nowrap;">
           <div class="col align-items-end">
             <div class="float-right text-muted" style="white-space: nowrap;">
               -
