--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -78,93 +78,93 @@
         Hotword sensitivity
       </div>
       <div class="card-body">
-        <div class="row" style="white-space: nowrap;">
-          <div class="col" style="white-space: nowrap;">
+        <div class="row" >
+          <div class="col" >
             "Hello, Teddy"
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
+        <div class="row" >
           <div class="col align-items-end">
-            <div class="float-right text-muted" style="white-space: nowrap;">
+            <div class="float-right text-muted" >
               -
             </div>
           </div>
           <div class="col">
             <input style="width: 30vw" id="hello_teddy" type="text" data-slider-ticks="[0, 1, 2, 3, 4,5,6,7,8,9,10]" data-slider-ticks-snap-bounds="1" />
           </div>
-          <div class="col align-items-start text-muted" style="white-space: nowrap;">
+          <div class="col align-items-start text-muted" >
             +
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
+        <div class="row" >
           <div class="col">
             "Explore !"
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
+        <div class="row" >
           <div class="col align-items-end">
-            <div class="float-right text-muted" style="white-space: nowrap;">
+            <div class="float-right text-muted" >
               -
             </div>
           </div>
           <div class="col">
             <input style="width: 30vw" id="explore" type="text" data-slider-ticks="[0, 1, 2, 3, 4,5,6,7,8,9,10]" data-slider-ticks-snap-bounds="1" />
           </div>
-          <div class="col align-items-start text-muted" style="white-space: nowrap;">
+          <div class="col align-items-start text-muted" >
             +
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
-          <div class="col" style="white-space: nowrap;">
+        <div class="row" >
+          <div class="col" >
             "Speak English"
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
+        <div class="row" >
           <div class="col align-items-end">
-            <div class="float-right text-muted" style="white-space: nowrap;">
+            <div class="float-right text-muted" >
               -
             </div>
           </div>
           <div class="col">
             <input style="width: 30vw" id="speak_english" type="text" data-slider-ticks="[0, 1, 2, 3, 4,5,6,7,8,9,10]" data-slider-ticks-snap-bounds="1" />
           </div>
-          <div class="col align-items-start text-muted" style="white-space: nowrap;">
+          <div class="col align-items-start text-muted" >
             +
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
-          <div class="col" style="white-space: nowrap;" style="white-space: nowrap;">
+        <div class="row" >
+          <div class="col"  >
             "Speak French"
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
+        <div class="row" >
           <div class="col align-items-end">
-            <div class="float-right text-muted" style="white-space: nowrap;">
+            <div class="float-right text-muted" >
               -
             </div>
           </div>
           <div class="col">
             <input style="width: 30vw" id="speak_french" type="text" data-slider-ticks="[0, 1, 2, 3, 4,5,6,7,8,9,10]" data-slider-ticks-snap-bounds="1" />
           </div>
-          <div class="col align-items-start text-muted" style="white-space: nowrap;">
+          <div class="col align-items-start text-muted" >
             +
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
-          <div class="col" style="white-space: nowrap;">
+        <div class="row" >
+          <div class="col" >
             "Speak German"
           </div>
         </div>
-        <div class="row" style="white-space: nowrap;">
+        <div class="row" >
           <div class="col align-items-end">
-            <div class="float-right text-muted" style="white-space: nowrap;">
+            <div class="float-right text-muted" >
               -
             </div>
           </div>
           <div class="col">
             <input style="width: 30vw" id="speak_german" type="text" data-slider-ticks="[0, 1, 2, 3, 4,5,6,7,8,9,10]" data-slider-ticks-snap-bounds="1" />
           </div>
-          <div class="col align-items-start text-muted" style="white-space: nowrap;">
+          <div class="col align-items-start text-muted" >
             +
           </div>
         </div>
