--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -301,7 +301,7 @@
         websocket.send("__SENSITIVITY__" + sensitivity_json);
       });
 
-      $("ngrok").click(function () {
+      $("#ngrok").click(function () {
         websocket.send("__NGROK__");
       });
 
