--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -180,14 +180,20 @@
         NGROK
       </div>
       <div class="card-body">
-
-
         <button class="btn btn-primary float-right mt-3" id="ngrok">NGROK</button>
-
       </div>
-
     </div>
 
+    <div class="card mt-5">
+      <div class="card-header">
+        Debug
+      </div>
+      <div class="card-body">
+        <textarea class="form-control" id="debugData" rows="10"></textarea>
+
+        </textarea>
+      </div>
+    </div>
   </div>
 
 
@@ -274,6 +280,7 @@
           $("#speak_french").slider().slider("setValue", json_data.sensitivities.french);
           $("#speak_german").slider().slider("setValue", json_data.sensitivities.german);
         }
+        $("#debugData").val($("#debugData").val() + "\n" + text);
 
       };
 
