--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -57,6 +57,12 @@
                     </label>
                   </div>
                   <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="radio" name="language" id="german_radio" value="de-DE">
+                    <label class="form-check-label" for="german_radio">
+                      German
+                    </label>
+                  </div>
+                  <div class="form-check form-check-inline">
                     <input class="form-check-input" type="radio" name="language" id="romanian_radio" value="ro-RO">
                     <label class="form-check-label" for="romanian_radio">
                       Romanian
