--- a/remote_webserver/templates/index.html
+++ b/remote_webserver/templates/index.html
@@ -72,7 +72,7 @@
             </div>
 
 
-            <button class="btn btn-primary float-right" type="submit">Speak</button>
+            <button class="btn btn-primary float-right" type="submit">Speak & set vision language</button>
             </form>
           </div>
         </div>
